animation and craftingStation

--- a/mariner-adrift/core/bin/main/.gitignore
+++ b/mariner-adrift/core/bin/main/.gitignore
@@ -1,8 +1,9 @@
-/Gameplay/
-/WorldMap/
-/Inventory/
-/Skills/
-/com/
 /Crafting/
-/Interfaces/
 /Entities/
+/Gameplay/
+/Interfaces/
+/Inventory/
+/Screens/
+/Skills/
+/WorldMap/
+/com/
