--- a/mariner-adrift/desktop/bin/main/.gitignore
+++ b/mariner-adrift/desktop/bin/main/.gitignore
@@ -1,15 +1,13 @@
 /BackTiles.png
 /ChunkBack.png
+/CraftingInterface.png
 /ForeTIles.png
 /Inventory-temp2.png
 /ItemMap.png
+/PlayerFrames.png
 /badlogic.jpg
 /digits.png
 /paused.png
 /player.png
-/TileMap.png
-/BackTiles.png
-/ForeTIles.png
-/ChunkBack.png
-/PlayerFrames.png
-/CraftingInterface.png
+/font.png
+/font.png.png
