Finished skills and made title screen

--- a/mariner-adrift/desktop/bin/main/.gitignore
+++ b/mariner-adrift/desktop/bin/main/.gitignore
@@ -5,9 +5,11 @@
 /Inventory-temp2.png
 /ItemMap.png
 /PlayerFrames.png
+/Skill Tree.png
 /badlogic.jpg
+/com/
 /digits.png
 /font.png
 /paused.png
 /player.png
-/Skill Tree.png
+/TitleScreen.png
